// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ManyToMany Decorator should add metadata 1`] = `
{
  "columns": [
    {
      "decorator": "PrimaryKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "ManyToManyFirstDecoratorEntity",
    "namespace": null,
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "id",
  ],
  "primarySource": null,
  "relations": [
    {
      "findKeys": {
        "manyToManyFirstDecoratorEntityId": "id",
      },
      "foreignConstructor": [Function],
      "foreignKey": "first",
      "joinKeys": {
        "manyToManyFirstDecoratorEntityId": "id",
      },
      "joinTable": "many_to_many_first_decorator_entity_x_many_to_many_second_decorator_entity",
      "key": "second",
      "options": {
        "loading": "ignore",
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "type": "ManyToMany",
    },
  ],
  "schemas": [],
  "target": [Function],
}
`;

exports[`ManyToMany Decorator should add metadata 2`] = `
{
  "columns": [
    {
      "decorator": "PrimaryKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "ManyToManySecondDecoratorEntity",
    "namespace": null,
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "id",
  ],
  "primarySource": null,
  "relations": [
    {
      "findKeys": {
        "manyToManySecondDecoratorEntityId": "id",
      },
      "foreignConstructor": [Function],
      "foreignKey": "second",
      "joinKeys": {
        "manyToManySecondDecoratorEntityId": "id",
      },
      "joinTable": "many_to_many_first_decorator_entity_x_many_to_many_second_decorator_entity",
      "key": "first",
      "options": {
        "loading": "ignore",
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "type": "ManyToMany",
    },
  ],
  "schemas": [],
  "target": [Function],
}
`;
